<resources>
    <string name="app_name">Limor</string>
    <string name="some_error">Sorry, there was an error, please try again</string>
    <string name="exception_message_generic">There was an error</string>
    <string name="image_content_description_default">image description</string>
    <string name="default_no_internet">Check your internet connection and try again.</string>
    <string name="no_connection_title">No Connection!</string>
    <string name="no_connection_description">Unfortunately, your internet connection has been lost. Please try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="join_limor">Join LIMOR</string>
    <string name="sig_in">Sign in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="terms">By signing up, you agree to our Terms and Conditions</string>
    <string name="already_account">Already have an account? Sign in</string>
    <string name="cant_open">Can\'t open!</string>
    <string name="error_not_valid_email">Please enter a valid email</string>
    <string name="error_not_valid_password">Password must contain 6+ characters</string>
    <string name="error_not_valid_username">Username must be unique</string>
    <string name="error_empty_field_template">%1$s must not be empty</string>
    <string name="reset_password">Reset password</string>
    <string name="you_have_no_permissions_facebook">You have not granted the required permissions to login with Facebook. We need your email address.</string>
    <string name="existing_user_email_signin_description"><font color='#FF5A4E'>Have you registered to Limor before 2021? To access your account</font>,<b> </b></string>
    <string name="email_login_only_for_users"><font color='#FF5A4E'>Email login is only for users who have registered accounts before 2021</font></string>
    <string name="sign_in_here"><font color='#F9BB4B'><u>Sign in here</u></font></string>
    <string name="choose_country">Choose your country</string>
    <string name="sign_in_error_try_sign_up">This number is not registered yet. Please sign up.</string>
    <string name="phone_number_already_exists">This phone number already exists</string>
    <string name="sign_in_with_phone_number">Already in use. Please Sign in.</string>
    <string name="sign_in_generic_error">Could not sign in. Generic error.</string>
    <string name="no_account_fount_with_email">No Limor Account found with this email. Please Register.</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_discover">Discover</string>
    <string name="bottom_menu_record">Record</string>
    <string name="bottom_menu_notifications">Notifications</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_record">Record</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_drafts">Drafts</string>
    <string name="title_edit">Edit</string>
    <string name="title_publish">Publish</string>
    <string name="description_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_drafts">Drafts</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save_as_draft">Save as Draft</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="record_permission_title">title record</string>
    <string name="record_permission_description">Record permission required</string>
    <string name="storage_permission_title">title storage</string>
    <string name="storage_permission_description">Storage permission required</string>
    <string name="alert_cancel_record_title">Cancel Cast</string>
    <string name="alert_cancel_record_descr">What would you wish to do with your Cast?</string>
    <string name="alert_cancel_record_save">Save as Draft</string>
    <string name="alert_cancel_record_do_not_save">Don\'t Save</string>
    <string name="save_draft_dialog_title">Save as Draft</string>
    <string name="save_draft_dialog_descr">Give your draft a name.</string>
    <string name="save_draft_dialog_hint_name">New Cast</string>
    <string name="draft_hint">Draft Name</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="title_title">Title</string>
    <string name="title_caption">Caption</string>
    <string name="title_hashtags">Hashtags</string>
    <string name="title_category">Categories</string>
    <string name="categories_hint">Categories<font color='#FF0000'>*</font></string>
    <string name="title_location">Location</string>
    <string name="title_language">Language<font color='#FF0000'>*</font></string>
    <string name="title_languages">Languages</string>
    <string name="cast_published_ok_title">Cast Published</string>
    <string name="cast_published_ok_description">Your cast has been published successfully</string>
    <string name="hint_caption">Caption &amp; Tags here<font color='#FF0000'>*</font></string>
    <string name="hint_title">Title here<font color='#FF0000'>*</font></string>
    <string name="text_seperator">C_TAG_SEP</string>
    <string name="new_line_seperator">\n\n</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="publish_now">Publish Now</string>
    <string name="publish_later">Publish Later</string>
    <string name="bookmark">Bookmark:</string>
    <string name="autosave">Autosave</string>
    <string name="uploading_audio">Uploading Audio…</string>
    <string name="hey">Hey</string>
    <string name="do_you_wish_to_stop">Do you wish to stop recording?</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="time_seconds">seconds</string>
    <string name="processing_audio">Processing Audio…</string>
    <string name="merge">Merge</string>
    <string name="merge_sections_prompt">Do you want to merge these sections?</string>
    <string name="remove">Remove</string>
    <string name="remove_marker_prompt">Do you want to remove this marker?</string>
    <string name="remove_piece_of_audio_prompt">Do you want to remove this piece of Audio?</string>
    <string name="select_marker_firs_prompt">You must select a marker first.</string>
    <string name="cant_create_more_than_one_marker_prompt">You can\'t create more than one Edit Marker.</string>
    <string name="paste">Paste</string>
    <string name="paste_prompt">Do you want to paste it here?</string>
    <string name="edit">Edit</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_changes">Save Changes?</string>
    <string name="recording_changed_prompt">The recording has been changed. Do you want to save these changes?</string>
    <string name="edit_or_publish_prompt">Would you like to edit this recording or go straight to the Publish screen?</string>
    <string name="publish">Publish</string>
    <string name="paste_overlap_alert">You cannot paste this section on top of itself. Please select different area.</string>
    <string name="how_to_edit_description">1: Tap top bar to drop the marker\n2: Mark the piece you wish to modify\n3: Delete a marker by long pressing top of it\n4: You can also preview, delete, copy &amp; paste selected piece of the cast by long pressing top of it</string>
    <string name="how_to_edit_title">How to Edit</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="offline_mode_toast">Offline Mode</string>
    <string name="alert_title_oops">Oops!</string>
    <string name="error_something_went_wrong">Something went wrong. Please try again.</string>
    <string name="progress_please_wait">Please wait…</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty_fields_prompt">Please make sure to fill all required fields.</string>
    <string name="invalid_email_prompt">Invalid Email</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_cannot_be_empty">Title can not be empty</string>
    <string name="caption_cannot_be_empty">Caption can not be empty</string>
    <string name="current_password_cannot_be_empty">Current password can not be empty</string>
    <string name="new_password_cannot_be_empty">New password can not be empty</string>
    <string name="confirm_password_cannot_be_empty">Confirm password can not be empty</string>
    <string name="all_fields_mandatory">All fields are mandatory</string>
    <string name="passwords_not_match">The passwords you entered does not match</string>
    <string name="delete_draft">Delete Draft</string>
    <string name="cancel_draft">Cancel Draft</string>
    <string name="unable_to_publish_cast">Unable to Publish Cast</string>
    <string name="internet_connection_lost">Unfortunately, your internet connect was lost. Save this cast as a draft and publish again</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_dismiss">Dismiss</string>
    <string name="menu_preview">Preview</string>
    <string name="imagepicker_folder">Folder</string>
    <string name="imagepicker_tap_to_select">Tap to select</string>
    <string name="autosaved_draft">Autosave</string>
    <string name="user_picture">User picture</string>
    <string name="more">More</string>
    <string name="verified">Verified</string>
    <string name="save">Save</string>
    <string name="cast_price_hint">e.g. €5</string>
    <string name="tier_price">Tier Price</string>
    <string name="tier_benefits">Tier Benefits</string>
    <string name="tier_name">Tier Name</string>
    <string name="tier_name_hint">e.g. Limor Patron Tier 1</string>
    <string name="tier_benefits_hint">• Premium Casts\n• Access to Private DM</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_prefered_method">Continue with your preferred method</string>
    <string name="sign_up_use_phone">Use your phone number</string>
    <string name="sig_up_continue_with_google">Continue with Google</string>
    <string name="sig_up_continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up_terms_part1">By signing up, you agree to our</string>
    <string name="sign_up_terms_part2"><u>terms and conditions</u></string>
    <string name="sig_up_already_have_account">Already have an account?</string>
    <string name="sign_in_underline"><u>Sign in</u></string>
    <string name="back">Back</string>
    <string name="continue_button">Continue</string>
    <string name="provide_your_phone_number">Provide your Phone Number</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="why_we_need_phone">why we need your number?</string>
    <string name="why_we_need_phone_explanation">We take our users privacy very seriously, in order to protect you and other users we require your device to be registered to your profile.</string>
    <string name="why_we_need_phone_know_more">To know more, please visit our</string>
    <string name="already_in_use">Already in use.</string>
</resources>