<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:background="@color/transparent">

    <ImageView
        android:id="@+id/ivUserPicture"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/marginSmall"
        android:contentDescription="@string/user_picture"
        android:src="@drawable/like_filled" />

    <ImageView
        android:id="@+id/ivVerifiedUser"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_alignEnd="@id/ivUserPicture"
        android:layout_alignBottom="@id/ivUserPicture"
        android:contentDescription="@string/verified"
        android:src="@drawable/verified"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/marginSmall"
        android:layout_toEndOf="@id/ivUserPicture"
        android:fontFamily="@font/roboto_medium"
        android:text="John Doe"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/btnMore"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/transparent"
        android:contentDescription="@string/more"
        android:src="@drawable/more" />

</RelativeLayout>
